--- a/Draw/Controller/Common/CommonUserInfoView.xib
+++ b/Draw/Controller/Common/CommonUserInfoView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1280</int>
+		<int key="IBDocument.SystemTarget">1296</int>
 		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
 		<string key="IBDocument.AppKitVersion">1138.47</string>
@@ -83,7 +83,7 @@
 							<object class="IBUIImageView" id="102507885">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{260, 250}</string>
+								<string key="NSFrameSize">{260, 288}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="318358717"/>
@@ -94,7 +94,7 @@
 							<object class="IBUIImageView" id="318358717">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{18, 39}, {42, 42}}</string>
+								<string key="NSFrame">{{18, 46}, {42, 42}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="396417944"/>
@@ -109,7 +109,7 @@
 							<object class="IBUILabel" id="396417944">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{68, 33}, {129, 21}}</string>
+								<string key="NSFrame">{{68, 46}, {129, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="349822805"/>
@@ -140,7 +140,7 @@
 							<object class="IBUILabel" id="504840725">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{68, 60}, {20, 21}}</string>
+								<string key="NSFrame">{{68, 72}, {30, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="580615044"/>
@@ -171,7 +171,7 @@
 							<object class="IBUILabel" id="580615044">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{96, 62}, {80, 21}}</string>
+								<string key="NSFrame">{{106, 74}, {80, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="65130283"/>
@@ -195,7 +195,7 @@
 							<object class="IBUIImageView" id="65130283">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{176, 62}, {21, 21}}</string>
+								<string key="NSFrame">{{187, 74}, {21, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="879677637"/>
@@ -210,7 +210,7 @@
 							<object class="IBUIButton" id="349822805">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{187, 33}, {55, 22}}</string>
+								<string key="NSFrame">{{187, 42}, {55, 28}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="504840725"/>
@@ -232,7 +232,7 @@
 							<object class="IBUIView" id="879677637">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{14, 90}, {232, 1}}</string>
+								<string key="NSFrame">{{14, 106}, {232, 1}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="810220336"/>
@@ -246,7 +246,7 @@
 							<object class="IBUIView" id="461986437">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{14, 165}, {232, 1}}</string>
+								<string key="NSFrame">{{14, 195}, {232, 1}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="855251072"/>
@@ -260,7 +260,7 @@
 							<object class="IBUILabel" id="810220336">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{18, 99}, {136, 22}}</string>
+								<string key="NSFrame">{{18, 119}, {136, 22}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="25945721"/>
@@ -284,7 +284,7 @@
 							<object class="IBUILabel" id="855251072">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{18, 174}, {136, 22}}</string>
+								<string key="NSFrame">{{18, 208}, {136, 22}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1040292532"/>
@@ -308,7 +308,7 @@
 							<object class="IBUIButton" id="25945721">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{18, 129}, {100, 26}}</string>
+								<string key="NSFrame">{{18, 151}, {100, 26}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="968379584"/>
@@ -338,7 +338,7 @@
 							<object class="IBUIButton" id="1040292532">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{18, 204}, {100, 26}}</string>
+								<string key="NSFrame">{{18, 238}, {100, 26}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -364,7 +364,7 @@
 							<object class="IBUIButton" id="968379584">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{142, 129}, {100, 26}}</string>
+								<string key="NSFrame">{{142, 151}, {100, 26}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="461986437"/>
@@ -384,7 +384,7 @@
 							<object class="IBUILabel" id="714977334">
 								<reference key="NSNextResponder" ref="215299453"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{193, 33}, {42, 21}}</string>
+								<string key="NSFrame">{{193, 46}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -415,7 +415,7 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrame">{{30, 110}, {260, 250}}</string>
+						<string key="NSFrame">{{30, 91}, {260, 288}}</string>
 						<reference key="NSSuperview" ref="627269487"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="102507885"/>
@@ -846,6 +846,10 @@
 		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
+		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
+			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
+			<real value="1296" key="NS.object.0"/>
+		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
